# ProjectC

./: .gitignore  1.c  CMakeLists.txt  HRD_프로젝트 계획서_1차_2조.hwp  README.md  platformio.ini  umi_readme.md  프로젝트_기술서 양식(2조).hwp
Led/: test.c
Web/: CMakeLists.txt
blind/: 1.c  blind.c  blind_auto_v1_step_limited.c  blind_auto_v2_0_mode_select.c  blind_auto_v2_1_mode_select_stable.c  blind_auto_v2_2_lcd_mode_select_stable.c  blind_auto_v2_3_lcd_mode_select_stable_final copy.c  blind_auto_v2_3_lcd_mode_select_stable_final.c  blind_auto_v3_mode_select_uart_stable.c  blind_auto_v4.c  blind_auto_v4_final.c  blind_auto_v5_lcd.c  blind_auto_v5_lcd_final.c  blind_debugging.c  check_hardware_switch.c  d.c  dd.c
led/: CdsAndLed.c  blind.c  ledpir.c  ledpir_blind.c  libserialporttest.c  pinChange.c
lib/: time_sender  time_sender.c  weather_sender  weather_sender.c
lib/i2c/: i2c_lcd.c  i2c_lcd.h
lib/lcd/: lcd.c  lcd.h  lcdconf.h
lib/uart1/: uart1.c
serial-pc/: CMakeLists.txt  Makefile  main.c
sql/: weather.sql
src/: CdsAndLed.c  blind.c  main  main.c  main_yj  makefile  pirblind.c  sibal.c  weaher_api.c  weatherLcd.c  weather_api  weather_api.c  weather_program
team/: total.c
test/: test.c
yj/: led2.c  testCds.c
